			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

09-Feb-2003
~~~~~~~~~~~
Allow dragging to a selected directory as long as it's not the source of the
drag.
If an error occurs opening a directory then don't report it in an error box if
a drag-and-drop operation is in progress.
Keep the title up-to-date for iconified windows.
Option to show menu on button-1 drags instead of copying.
Aborting an action window tries to kill all child processes, not just the
immediate child, and doesn't close the window until it has actually stopped.
Symlinks to mount points now work (reported by Daniele Peri).
Include textual description of types in various places (Stephen Watson).
Allow dragging directories to bookmarks edit window or toolbar icon, with
spring loading (suggested by Stephen Watson and George De Bruin).
Removed confusing Set Icon choice from DnD menu.
Bugfix: If a directory on the panel changed to/from being an application, the
	label wasn't hidden / shown.

08-Feb-2003
~~~~~~~~~~~
Changing the icon for a MIME type updates all filer windows.
When dragging a pinboard icon over itself, pretend the icon isn't there to
allow fine repositioning.
When an error prevents scanning a directory, show the error in the window
title bar, and only report it once in an error box.
Don't create thumbnails of thumbnails by checking if the image is in
~/.thumbnails/normal. Before, the test was the size of the file, not its
location.
Pinboard image style Scale is now called Stretch; Scale now scales without
changing the aspect ratio.

07-Feb-2003
~~~~~~~~~~~
Auto-scrolling during drag-and-drop works again, and now in list view too.

02-Feb-2003
~~~~~~~~~~~
Fixed clipping and wrapping problems with pinboard icon text.

01-Feb-2003
~~~~~~~~~~~
Don't use double-buffering for the pinboard. This might make things flicker
slightly, but it's much faster on some systems.
Updated Spanish translation (Marcelo Ramos).

31-Jan-2003
~~~~~~~~~~~