@@ -70,6 +70,7 @@ static Option o_large_width;
 Option o_small_width;
 Option o_display_show_hidden;
 Option o_display_show_thumbs;
+Option o_display_show_headers;
 Option o_display_inherit_options;
 static Option o_filer_change_size_num;
 
@@ -95,6 +96,7 @@ void display_init()
 	option_add_int(&o_small_width, "display_small_width", 250);
 	option_add_int(&o_display_show_hidden, "display_show_hidden", FALSE);
 	option_add_int(&o_display_show_thumbs, "display_show_thumbs", FALSE);
+	option_add_int(&o_display_show_headers, "display_show_headers", TRUE);
 	option_add_int(&o_display_inherit_options,
 		       "display_inherit_options", FALSE); 
 	option_add_int(&o_filer_change_size_num, "filer_change_size_num", 30); 
@@ -527,6 +529,9 @@ static void options_changed(void)
 		if (o_display_dirs_first.has_changed ||
 		    o_display_caps_first.has_changed)
 			view_sort(VIEW(filer_window->view));
+
+		if (o_display_show_headers.has_changed)
+			flags |= VIEW_UPDATE_HEADERS;
 
 		if (o_large_width.has_changed || o_small_width.has_changed)
 			flags |= VIEW_UPDATE_NAME; /* Recreate PangoLayout */
