@@ -106,6 +106,7 @@ struct _ViewIfaceClass {
 enum {
 	VIEW_UPDATE_VIEWDATA	= 1 << 0,
 	VIEW_UPDATE_NAME	= 1 << 1,
+	VIEW_UPDATE_HEADERS	= 1 << 2,
 };
 
 GType view_iface_get_type(void);
