@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+10-Feb-2003
+~~~~~~~~~~~
+Option to turn off column headings in List View (Adam Sampson).
+
 09-Feb-2003
 ~~~~~~~~~~~
 Allow dragging to a selected directory as long as it's not the source of the
